crates/report/src/snapshots/studiole_report__report__tests__report_debug__with_additional_and_source.snap
---
source: crates/report/src/report.rs
expression: debug
---
Outer operation failed
▷ key: outer_val
  Caused by: Inner operation failed
▷ key: inner_val
