crates/report/src/snapshots/studiole_report__report__tests__report_debug__with_source.snap
---
source: crates/report/src/report.rs
expression: debug
---
Outer operation failed
  Caused by: Inner operation failed
